--- a/final/e-learning-api/package.json
+++ b/final/e-learning-api/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "joi": "^17.12.2",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
