--- a/final/e-learning-api/package.json
+++ b/final/e-learning-api/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "e-learning",
+  "name": "e-learning-api",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "express": "^4.18.3",
     "joi": "^17.12.2",
     "knex": "^3.1.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "uuid": "^9.0.1"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0",
+    "typescript": "^5.4.2"
   }
 }
